Fixed menu bar collapse.

--- a/Content/bootstrap.css
+++ b/Content/bootstrap.css
@@ -4801,7 +4801,6 @@ float: left;
     .navbar-inverse .navbar-collapse,
     .navbar-inverse .navbar-form {
         background-color: #FFFFFF;
-        border-color: #101010;
     }
 
     .navbar-inverse .navbar-nav > .open > a,
